--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                   </div>
                   <p class="blurb">Web app for a popular Magic: the Gathering format</p>
                   <div class="flexRow l-full-w">
-                     <a href="https://github.com/ikeshark/edh-life-counter2" class="learnMore">
+                     <a href="https://github.com/ikeshark/edhelper" class="learnMore">
                         <img class="sm-icon" src="img/github.png" alt="github logo">Learn More
                      </a>
-                     <a href="https://ikeshark.github.io/edh-life-counter2/" class="learnMore">
+                     <a href="https://ikeshark.github.io/edhelper/" class="learnMore">
                         Explore
                      </a>
                   </div>
@@ -97,10 +97,10 @@
                   </div>
                   <p class="blurb">Doodle on hover</p>
                   <div class="flexRow l-full-w">
-                     <a href="https://github.com/ikeshark/jquery-doodler" class="learnMore">
+                     <a href="https://github.com/ikeshark/pixelated-doodler" class="learnMore">
                         <img class="sm-icon" src="img/github.png" alt="github logo">Learn More
                      </a>
-                     <a href="https://ikeshark.github.io/jquery-doodler" class="learnMore">
+                     <a href="https://ikeshark.github.io/pixelated-doodler" class="learnMore">
                         Explore
                      </a>
                   </div>
