style and query tweaks

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                   </div>
                   <p class="blurb">Web app for a popular Magic: the Gathering format</p>
                   <div class="flexRow l-full-w">
-                     <a href="https://github.com/ikeshark/edhelper" class="learnMore">
+                     <a href="https://github.com/ikeshark/edhelper" class="learnMore flexRow flexCenter">
                         <img class="sm-icon" src="img/github.png" alt="github logo">Learn More
                      </a>
-                     <a href="https://ikeshark.github.io/edhelper/" class="learnMore">
+                     <a href="https://ikeshark.github.io/edhelper/" class="learnMore flexRow flexCenter">
                         Explore
                      </a>
                   </div>
@@ -80,10 +80,10 @@
                   </div>
                   <p class="blurb">Mobile-capable two-player checkers game</p>
                   <div class="flexRow l-full-w">
-                     <a href="https://github.com/ikeshark/checkers" class="learnMore">
+                     <a href="https://github.com/ikeshark/checkers" class="learnMore flexRow flexCenter">
                         <img class="sm-icon" src="img/github.png" alt="github logo">Learn More
                      </a>
-                     <a href="https://ikeshark.github.io/checkers" class="learnMore">
+                     <a href="https://ikeshark.github.io/checkers" class="learnMore flexRow flexCenter">
                         Explore
                      </a>
                   </div>
@@ -97,10 +97,10 @@
                   </div>
                   <p class="blurb">Doodle on hover</p>
                   <div class="flexRow l-full-w">
-                     <a href="https://github.com/ikeshark/pixelated-doodler" class="learnMore">
+                     <a href="https://github.com/ikeshark/pixelated-doodler" class="learnMore flexRow flexCenter">
                         <img class="sm-icon" src="img/github.png" alt="github logo">Learn More
                      </a>
-                     <a href="https://ikeshark.github.io/pixelated-doodler" class="learnMore">
+                     <a href="https://ikeshark.github.io/pixelated-doodler" class="learnMore flexRow flexCenter">
                         Explore
                      </a>
                   </div>
@@ -119,7 +119,9 @@
                   </div>
                   <p>Two Baltimore indie rockers get together to remember 90s pop</p>
                   <div class="flexRow l-full-w">
-                     <a href="http://www.citypaper.com/music/bcp-cms-1-1485333-migrated-story-cp-20130508-music-20130508-story.html" class="learnMore">Explore</a>
+                     <a class="learnMore" href="http://www.citypaper.com/music/bcp-cms-1-1485333-migrated-story-cp-20130508-music-20130508-story.html">
+                       Explore
+                     </a>
                   </div>
                </div>
             </div>
@@ -131,7 +133,9 @@
                   </div>
                   <p>Five longtime friends follow their dream, making exuberant indie-rock</p>
                   <div class="flexRow l-full-w">
-                     <a href="http://www.citypaper.com/music/http://www.citypaper.com/bcp-cms-1-1636273-migrated-story-cp-20140219-music-20140219-story.html" class="learnMore">Explore</a>
+                     <a class="learnMore" href="http://www.citypaper.com/music/http://www.citypaper.com/bcp-cms-1-1636273-migrated-story-cp-20140219-music-20140219-story.html">
+                       Explore
+                     </a>
                   </div>
                </div>
             </div>
@@ -143,7 +147,9 @@
                   </div>
                   <p>A review of Kelman's novel <cite>Moe Said She Was Quirky</cite></p>
                   <div class="flexRow l-full-w">
-                     <a href="http://www.citypaper.com/bcp-cms-1-1481608-migrated-story-cp-20130501-books-20130501-story.html" class="learnMore">Explore</a>
+                     <a class="learnMore" href="http://www.citypaper.com/bcp-cms-1-1481608-migrated-story-cp-20130501-books-20130501-story.html">
+                       Explore
+                     </a>
                   </div>
                </div>
             </div>
