mobile fixes try 2

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                <br /><br />I'm a quick learner with an appetite for education. As a writer, I'm obessed with narrative and wordplay.
                As a <a href="http://ikeshark.bandcamp.com">musician</a> I strive to create miniature sonic worlds, both alien and familiar.
             </p>
-            <img id="me" src="img/me.jpg" alt="The reluctant smile of MS Shank AKA Ike Shark">
+            <img id="me" class="border-circle" src="img/me.jpg" alt="The reluctant smile of MS Shank AKA Ike Shark">
          </div>
          <div class="small-spacer"></div>
          <h2 id="code">Coding</h2>
@@ -161,13 +161,13 @@
             to any of the contacts below.</p>
             <div id="iconContainer">
                <a href="https://www.linkedin.com/in/michael-shank-3a2901b9">
-                  <img class="icon orange-h" src="img/linkedin.svg" alt="linked in logo">
+                  <img class="icon yellow-h" src="img/linkedin.svg" alt="linked in logo">
                </a>
                <a href="https://www.instagram.com/ikeshark/">
-                  <img class="icon orange-h border-rounded" src="img/instagram.png" alt="instagram logo">
+                  <img class="icon yellow-h border-rounded" src="img/instagram.png" alt="instagram logo">
                </a>
                <a href="https://github.com/ikeshark">
-                  <img class="icon orange-h border-circle" src="img/github.png" alt="github logo">
+                  <img class="icon yellow-h border-circle" src="img/github.png" alt="github logo">
                </a>
                <a class="email flexRow blue-h" href="mailto:mike.shank@gmail.com">
                   email:
@@ -176,7 +176,6 @@
             </div>
          </div>
       </div>
-      <script src="index.js"></script>
    </main>
 </body>
 </html>
