final mobile fix

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                      <h3>Dungeonesse</h3>
                      <h4>Music Profile</h4>
                   </div>
-                  <p>Two Baltimore indie rockers get together to remember 90s pop</p>
+                  <p class="blurb">Two Baltimore indie rockers get together to remember 90s pop</p>
                   <div class="flexRow l-full-w">
                      <a class="learnMore" href="http://www.citypaper.com/music/bcp-cms-1-1485333-migrated-story-cp-20130508-music-20130508-story.html">
                        Explore
@@ -131,7 +131,7 @@
                      <h3>Sun Club</h3>
                      <h4>Music Profile</h4>
                   </div>
-                  <p>Five longtime friends follow their dream, making exuberant indie-rock</p>
+                  <p class="blurb">Five longtime friends follow their dream, making exuberant indie-rock</p>
                   <div class="flexRow l-full-w">
                      <a class="learnMore" href="http://www.citypaper.com/music/http://www.citypaper.com/bcp-cms-1-1636273-migrated-story-cp-20140219-music-20140219-story.html">
                        Explore
@@ -145,7 +145,7 @@
                      <h3>James Kelman</h3>
                      <h4>Book Review</h4>
                   </div>
-                  <p>A review of Kelman's novel <cite>Moe Said She Was Quirky</cite></p>
+                  <p class="blurb">A review of Kelman's novel <cite>Moe Said She Was Quirky</cite></p>
                   <div class="flexRow l-full-w">
                      <a class="learnMore" href="http://www.citypaper.com/bcp-cms-1-1481608-migrated-story-cp-20130501-books-20130501-story.html">
                        Explore
