contact me opaque mobile

--- a/index.html
+++ b/index.html
@@ -156,24 +156,27 @@
          </div>
          <h2 id="contact">Contact Me</h2>
          <div id="contactMe" class="flex flexCenter">
-            <p id="contactMeText">Looking for a freelancer or temp? Want to hire me for a regular gig?
-            Direct any and all inquries, song requests, and manifestos
-            to any of the contacts below.</p>
-            <div id="iconContainer">
-               <a href="https://www.linkedin.com/in/michael-shank-3a2901b9">
-                  <img class="icon yellow-h" src="img/linkedin.svg" alt="linked in logo">
-               </a>
-               <a href="https://www.instagram.com/ikeshark/">
-                  <img class="icon yellow-h border-rounded" src="img/instagram.png" alt="instagram logo">
-               </a>
-               <a href="https://github.com/ikeshark">
-                  <img class="icon yellow-h border-circle" src="img/github.png" alt="github logo">
-               </a>
-               <a class="email flexRow blue-h" href="mailto:mike.shank@gmail.com">
-                  email:
-                  <img class="icon" src="img/mail.png" alt="email icon">
-               </a>
-            </div>
+           <div class="opaque-bg flex flexCenter">
+             <p id="contactMeText">Looking for a freelancer or temp? Want to hire me for a regular gig?
+             Direct any and all inquries, song requests, and manifestos
+             to any of the contacts below.</p>
+             <div id="iconContainer">
+                <a href="https://www.linkedin.com/in/michael-shank-3a2901b9">
+                   <img class="icon yellow-h" src="img/linkedin.svg" alt="linked in logo">
+                </a>
+                <a href="https://www.instagram.com/ikeshark/">
+                   <img class="icon yellow-h border-rounded" src="img/instagram.png" alt="instagram logo">
+                </a>
+                <a href="https://github.com/ikeshark">
+                   <img class="icon yellow-h border-circle" src="img/github.png" alt="github logo">
+                </a>
+                <a class="email flexRow blue-h" href="mailto:mike.shank@gmail.com">
+                   email:
+                   <img class="icon" src="img/mail.png" alt="email icon">
+                </a>
+             </div>
+
+           </div>
          </div>
       </div>
    </main>
