--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 </head>
 <body>
    <header class="flexRow flexCenter white-bg">
-      <a id="headerName" class="l-49w" href="#scrollContainer">Michael Snyder Shank</a>
+      <a id="headerName" class="l-49w" href="#scrollContainer">Michael <span class="hide-for-small">Snyder</span> Shank</a>
       <nav>
          <a class="l-left-m-pct" href="#about">about</a>
          <a class="l-left-m-pct" href="#code">coding</a>
          <a class="l-left-m-pct" href="#writing">writing</a>
+         <a class="l-left-m-pct" href="#music">music</a>
          <a class="l-left-m-pct" href="#contact">contact</a>
       </nav>
    </header>
@@ -26,8 +27,8 @@
          <div id="intro" class="l-full-r">
             <h1 id="introText" class="opaque-bg">
                Hi, I'm <span>Michael Snyder Shank</span>. <br /><br />
-               I'm a <a href="#code">web developer</a> <span class="sans">&amp;</span>
-               <a href="#writing">writer</a>.
+               I'm a <a href="#code">web developer</a>, a <a href="#writing">writer</a>, <span class="sans">&amp;</span>
+               a <a href="#music">musician</a>.
             </h1>
          </div>
          <div class="l-15vh"></div>
@@ -37,8 +38,8 @@
             <p id="aboutMeText" class="font-lg">
                I'm a self taught coder, comfortable with Javascript, CSS, and HTML.
                I'm also familiar with jQuery and ReactJS. Always eager to continue my education, I'm also learning the basics of Ruby and Python.
-               <br /><br />I'm a quick learner with an appetite for education. As a writer, I'm obessed with narrative and wordplay.
-               As a <a target="_blank" href="http://ikeshark.bandcamp.com">musician</a> I strive to create miniature sonic worlds, both alien and familiar.
+               <br /><br />I'm a quick learner with an appetite for education. As a <a href="#writing">writer</a>, I'm obessed with narrative and wordplay.
+               As a <a href="#music">musician</a> I strive to create miniature sonic worlds, both alien and familiar.
             </p>
             <img id="me" class="border-circle" src="img/me.jpg" alt="The reluctant smile of MS Shank AKA Ike Shark">
             <div id="aboutMeSidebar" class="flex flexSpaceAround">
@@ -156,10 +157,57 @@
                </div>
             </div>
          </div>
+         <div class="l-15vh"></div>
+         <h2 id="music">Music</h2>
+         <div class="horizontalLine"></div>
+         <div class="flexRow flexWrap flexCenter l-80w">
+            <div id="currentWork" class="portfolioContainers l-30vw-m">
+               <div class="portfolioContainers l-30vw-m invisible flex flexSpaceAround relative">
+                  <div class="l-full-w flex flexSpaceAround">
+                     <h3>Current Solo Work</h3>
+                     <h4>Singles and Demos</h4>
+                  </div>
+                  <p class="blurb">For my latest work, visit my soundcloud</p>
+                  <div class="flexRow l-full-w">
+                     <a target="_blank" class="learnMore l-learnMore" href="https://soundcloud.com/ikeshark">
+                       Explore
+                     </a>
+                  </div>
+               </div>
+            </div>
+            <div id="soloAlbums" class="portfolioContainers l-30vw-m">
+               <div class="portfolioContainers l-30vw-m invisible flex flexSpaceAround relative">
+                  <div class="l-full-w flex flexSpaceAround">
+                     <h3>Solo Albums</h3>
+                     <h4>Albums & EPs</h4>
+                  </div>
+                  <p class="blurb">Old albums, both short and long</p>
+                  <div class="flexRow l-full-w">
+                     <a target="_blank" class="learnMore l-learnMore" href="https://ikeshark.bandcamp.com">
+                       Explore
+                     </a>
+                  </div>
+               </div>
+            </div>
+            <div id="barnyardSharks" class="portfolioContainers l-30vw-m">
+               <div class="portfolioContainers l-30vw-m invisible flex flexSpaceAround relative">
+                  <div class="l-full-w flex flexSpaceAround">
+                     <h3>Barnyard Sharks</h3>
+                     <h4>Albums & EPs</h4>
+                  </div>
+                  <p class="blurb">The Barnyard Sharks are coming for you!</p>
+                  <div class="flexRow l-full-w">
+                     <a target="_blank" class="learnMore l-learnMore" href="http://barnyardsharks.bandcamp.com">
+                       Explore
+                     </a>
+                  </div>
+               </div>
+            </div>
+         </div>
          <h2 id="contact">Contact Me</h2>
          <div id="contactMe" class="l-70vh-p flex flexCenter">
            <div class="l-padding opaque-bg flex flexCenter">
-             <p id="contactMeText" class="l-45w">Looking for a freelancer or temp? Want to hire me for a regular gig?
+             <p id="contactMeText" class="l-45w">Looking for a freelance coder, musical collaborator, or writing buddy?
              Direct any and all inquries, song requests, and manifestos
              to any of the contacts below.</p>
              <div id="iconContainer" class="flexRow flexSpaceAround">
