--- a/dev.html
+++ b/dev.html
@@ -8,8 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Barrio|Abel" rel="stylesheet">
   <link rel="stylesheet" href="styles.min.css">
   <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
-
-  <script src="https://kit.fontawesome.com/a0a6bb5434.js"></script>
+  <script src="vue.js"></script>
 </head>
 
 <body class="color">
@@ -306,7 +305,7 @@
   </div> <!-- scroll container -->
 
   <div id="bottomBar" class="hide-bottomBar fixed bottom-0 left-0 w-full p-2 flex items-center justify-between bg shadow-t-color-o3">
-    <iframe height="60" width="290" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/832155290&color=%23160906&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+    <iframe height="60" width="290" data-src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/832155290&color=%23160906&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
     <button class="h-8 w-8 border-2 border-currentColor rounded-full">&times;</button>
   </div>
 
@@ -461,6 +460,8 @@
       function showBottomBar(entries) {
         entries.forEach(entry => {
           if (entry.isIntersecting) {
+            const iframe = document.querySelector('iframe');
+            iframe.src = iframe.getAttribute('data-src');
             document.querySelector('#bottomBar').classList.remove('hide-bottomBar');
           }
         })
@@ -499,6 +500,7 @@
 
     })();
   </script>
+  <script src="https://kit.fontawesome.com/a0a6bb5434.js"></script>
 
 </body>
 </html>
