--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                <a aria-label="my codepen" target="_blank" class="outline-currentColor block hover:color4 -ml-8" href="https://codepen.io/ikeshark/">
                  <i class="fab fa-codepen fa-lg" aria-hidden="true"></i>
                </a>
-               <a aria-label="my resume" target="_blank" class="outline-currentColor block hover:color4 my-12 ml-4" href="https://www.instagram.com/ikeshark/">
+               <a aria-label="my resume" target="_blank" class="outline-currentColor block hover:color4 my-12 ml-4" href="img/resume.pdf" download>
                  <i class="far fa-file-pdf fa-lg" aria-hidden="true"></i>
                </a>
                <a aria-label="my github" target="_blank" class="outline-currentColor block hover:color4 -ml-8" href="https://github.com/ikeshark">
@@ -158,7 +158,7 @@
                 <h3 class="color-invert font-barrio text-4xl leading-none">PIXELATED DOODLER</h3>
                 <h4 class="color-invert2 -mt-1 text-xl">jQuery</h4>
               </div>
-              <p class="color-invert">My take on the ‘hover to doodle’ exercise; it shows I know jQuery which is still a thing, hey</p>
+              <p class="color-invert">My take on the ‘hover to doodle’ jQuery exercise</p>
               <div class="flex justify-between"><a href="https://github.com/ikeshark/pixelated-doodler" aria-label="Code repository for Pixedlated Doodler" class="hiddenLink outline-color3 bg-invert2 hover:filter flex-grow p-3 mr-4 text-sm"><i aria-hidden="true"
                     class="fab fa-github fa-lg"></i> <span class="underline">Learn More</span></a> <a href="https://ikeshark.github.io/pixelated-doodler" aria-label="Pixedlated Doodler" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 flex-grow text-sm"><i
                     aria-hidden="true" class="fas fa-external-link-alt"></i> <span class="underline">Explore</span></a></div>
@@ -252,8 +252,9 @@
             <a
               target="_blank"
               class="outline-currentColor hover:color4"
-              href="https://www.instagram.com/ikeshark/"
+              href="img/resume.pdf"
               aria-label="My resume"
+              download
             >
               <i class="far fa-file-pdf fa-lg" aria-hidden="true"></i>
             </a>
