--- a/index.html
+++ b/index.html
@@ -92,13 +92,25 @@
 
         <section id="coding" class="grid gap-md">
           <h2 class="pt-16 font-barrio text-4xl underline">CODING</h2>
+          <div class="shadow-color-o3 text-center bg-cover bg-center" style="background-image: url(&quot;img/chain.jpg&quot;);">
+            <div class="hiddenLinkWrapper flex flex-col justify-between opacity-0 hover:opacity-100 h-full p-3 bg-invert">
+              <div>
+                <h3 class="color-invert font-barrio text-4xl leading-none">The Chain</h3>
+                <h4 class="color-invert2 -mt-1 text-xl">Svelte</h4>
+              </div>
+              <p class="color-invert">Svelte app for the motivational technique Don’t Break the Chain &mdash; featuring history, badges, and customizable themes</p>
+              <div class="flex justify-between"><a href="https://github.com/ikeshark/the-chain" aria-label="Code repository for The Chain" class="hiddenLink outline-color3 bg-invert2 hover:filter flex-grow p-3 mr-4 text-sm"><i aria-hidden="true" class="fab fa-github fa-lg"></i>
+                  <span class="underline">Learn More</span></a> <a href="https://ikeshark.github.io/the-chain" aria-label="The Chain" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 flex-grow text-sm"><i aria-hidden="true" class="fas fa-external-link-alt"></i>
+                  <span class="underline">Explore</span></a></div>
+            </div>
+          </div>
           <div class="shadow-color-o3 text-center bg-cover bg-center" style="background-image: url(&quot;img/sharkApp.jpg&quot;);">
             <div class="hiddenLinkWrapper flex flex-col justify-between opacity-0 hover:opacity-100 h-full p-3 bg-invert">
               <div>
                 <h3 class="color-invert font-barrio text-4xl leading-none">BAND APP</h3>
                 <h4 class="color-invert2 -mt-1 text-xl">React | Firebase</h4>
               </div>
-              <p class="color-invert">React app designed for my band the Barnyard Sharks. Allows band members to share lyrics, song ideas, and set lists</p>
+              <p class="color-invert">React app designed for my band the Barnyard Sharks &mdash; allows band members to share lyrics, song ideas, and set lists</p>
               <div class="flex justify-between"><a href="https://github.com/ikeshark/barnyard-sharks" aria-label="Code repository for Band App" class="hiddenLink outline-color3 bg-invert2 hover:filter flex-grow p-3 mr-4 text-sm"><i aria-hidden="true" class="fab fa-github fa-lg"></i>
                   <span class="underline">Learn More</span></a> <a href="https://ikeshark.github.io/barnyard-sharks" aria-label="Band App" class="hiddenLink outline-color3 bg-invert2 hover:filter p-3 flex-grow text-sm"><i aria-hidden="true" class="fas fa-external-link-alt"></i>
                   <span class="underline">Explore</span></a></div>
